# erpnext-cli

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md
.cargo/: config.toml
src/: cli.rs  client.rs  config.rs  error.rs  main.rs
src/commands/: auth.rs  doctype.rs  download_pdf.rs  method.rs  mod.rs  upload.rs
tests/: cli.rs  integration.rs
