[package]
name = "erpnext"
version = "0.1.5"
edition = "2021"
description = "A CLI tool for interacting with ERPNext via its REST API"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart", "rustls-tls"], default-features = false }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
tabled = "0.18"
colored = "2"
thiserror = "2"
color-eyre = "0.6"
clap_complete = "4"
base64 = "0.22"
mime_guess = "2"

[dev-dependencies]
httpmock = "0.7"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
